[gd_scene load_steps=9 format=2]

[ext_resource path="res://Artwork/villager.png" type="Texture" id=1]
[ext_resource path="res://Units/VillagerUnit.gd" type="Script" id=2]
[ext_resource path="res://Units/UnitDataMenuDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://Buildings/BuildingMenu.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=3]
radius = 14.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 170, 61.375 )

[sub_resource type="CircleShape2D" id=2]
radius = 38.1182

[sub_resource type="CircleShape2D" id=1]
radius = 14.0357

[node name="VillagerUnit" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="BuildingMenu" parent="." instance=ExtResource( 4 )]

[node name="UnitSelection" type="Area2D" parent="."]
z_index = 2
priority = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnitSelection"]
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="UnitSelection"]
position = Vector2( 851, 530.375 )
z_index = 10
shape = SubResource( 4 )

[node name="Villager" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="UnitDataMenuDisplay" parent="." instance=ExtResource( 3 )]

[connection signal="input_event" from="UnitSelection" to="." method="_on_UnitSelection_input_event"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_DetectionArea_area_exited"]
